feat(backend): complete integration for booking/showtime + core IAM/catalog/facility alignment
- freeze booking/showtime state model and Redis seat-hold policy (seat:hold:{showtimeId}:{seatId}, TTL 10m)
- implement booking core flow: hold -> create pending order -> pay -> issue ticket
- add payment idempotency guard via transactionId and strengthen seat-hold ownership checks
- add refund workflow with policy window checks and ticket/seat status transitions
- enrich ticket UX data (refundable, refundPercent) and improve My Tickets/check-in behavior
- add showtime realtime seat-map TTL exposure and near-start showtime filtering
- add Review/Insight module skeleton (entity/repo/service/controller/mapper/dto)
- add module implementation guides + MASTER_AGENT_PLAN for Codex/Gemini wave coordination
- add wave-3 hardening tests for payment and ticket service logic
- align shared API/error handling updates from parallel integration and update progress tracking docs